--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "description": "volunteasy",
   "dependencies": {
+    "bower": "^1.6.5",
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4",
+    "ionic": "^1.7.7"
   },
   "devDependencies": {
-    "bower": "^1.3.3",
+    "bower": "^1.6.5",
+    "ionic": "^1.7.7",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
   },
